' Copyright (C) 2019 - present Juergen Zimmermann, Hochschule Karlsruhe
'
' This program is free software: you can redistribute it and/or modify
' it under the terms of the GNU General Public License as published by
' the Free Software Foundation, either version 3 of the License, or
' (at your option) any later version.
'
' This program is distributed in the hope that it will be useful,
' but WITHOUT ANY WARRANTY; without even the implied warranty of
' MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
' GNU General Public License for more details.
'
' You should have received a copy of the GNU General Public License
' along with this program.  If not, see <https://www.gnu.org/licenses/>.

' Preview durch <Alt>d

@startuml Entity

package typeorm {
  class "@Entity" as Entity
  hide Entity circle
  class "@Column" as Column
  hide Column circle
  class "@PrimaryColumn" as PrimaryColumn
  hide PrimaryColumn circle
  class "@OneToMany" as OneToMany
  hide OneToMany circle
  class "@JoinColumn" as JoinColumn
  hide JoinColumn circle
  class "@ManyToOne" as ManyToOne
  hide ManyToOne circle
  class "@CreateDateColumn" as CreateDateColumn
  hide CreateDateColumn circle
  class "@UpdateDateColumn" as UpdateDateColumn
  hide UpdateDateColumn circle
}

package film.entity {
  class "type Genre = 'ACTION' | 'ADVENTURE' | 'ANIMATION' | 'BIOGRAPHY' | 'COMEDY' | 'CRIME' | 'DRAMA' | 'FANTASY' | 'FILM-NOIR' | 'HISTORY' | 'HORROR' | 'MYSTERY' | 'ROMANCE' | 'SCI-FI' | 'THRILLER' | 'WESTERN' | undefined" as Genre
  hide Genre circle

  class Film <<entity>> <<@Entity>> {
    @Column() @PrimaryColumn() readonly id: number
    @Column() readonly version: number
    @Column() readonly titel: string
    @Column() readonly genre: Genre
    @Column() readonly rating: number
    @Column() readonly spieldauer: number
    @Column() readonly erscheinungsjahr: number
    @Column() readonly regisseur: Regisseur
    @Column() readonly schauspieler: Schauspieler
    @CreateDateColumn() readonly erzeugt: Date
    @UpdateDateColumn() readonly aktualisiert: Date
  }

  class Schauspieler <<entity>> <<@Entity>> {
    @Column() @PrimaryColumn() readonly id: number
    @Column() readonly version: number    
    @Column() readonly vorname: string
    @Column() readonly nachname: string
    @Column() readonly geburtsdatum: Date
    @Column() readonly groesse: number
    @Column() readonly sozileMedien: string
  }

  class Regisseur <<entity>> <<@Entity>> {
    @Column() @PrimaryColumn() readonly id: number
    @Column() readonly version: number    
    @Column() readonly vorname: string
    @Column() readonly nachname: string
    @Column() readonly geburtsdatum: Date
    @Column() readonly filme: Film
  }

  Film ..> Entity
  Film *-- "*" Regisseur : @OneToOne() Regisseur
  Film *-- "*" Schauspieler : @OneToMany() schauspielerListe
  Film .up.> Genre
}

hide empty members

footer (c) Juergen Zimmermann

@enduml
